--- a/views/toy/rubik/detail.hbs
+++ b/views/toy/rubik/detail.hbs
@@ -13,7 +13,7 @@
     <div class="col">
       <h1>Product Information</h1>
       <h5 class="mt-5">Category: {{rubik.category}}</h5>
-      <h5>Model: {{rubik.name}}</h5>
+      <h5>Name: {{rubik.name}}</h5>
       <h5>Price: {{rubik.price}} vnd</h5>
       <form action="/homepage/order" method="post">
       <input
